[package]
name = "twilight-webhook"
description = "Caching and utility methods for Discord webhooks, a third party crate of the Twilight ecosystem"
repository = "https://github.com/laralove143/twilight-webhook"
license = "MIT"
keywords = ["discord", "twilight", "webhooks"]
categories = ["asynchronous", "caching", "web-programming::http-client", "web-programming::websocket"]
version = "0.11.3"
edition = "2021"

[dependencies]
dashmap = "5.3"
thiserror = "1.0"
twilight-http = "0.11"
twilight-model = "0.11"
twilight-cache-inmemory = "0.11"
twilight-validate = "0.11"
